--- a/style.css
+++ b/style.css
@@ -1,3 +1,16 @@
 body {
-    font-family: 'Montserrat', sans-serif;
+    /* font-family: 'Montserrat', sans-serif; */
+}
+
+a {
+    color: inherit; 
+    text-decoration: none;
+}
+
+a:hover 
+{
+    color: inherit;  
+    text-decoration:none; 
+    cursor:pointer;  
+    box-shadow: 0 5px 10px rgba(154,160,185,.05), 0 5px 10px rgba(166,173,201,.2);
 }
