--- a/pages/symptoms/symptoms.css
+++ b/pages/symptoms/symptoms.css
@@ -10,3 +10,36 @@ a:hover
     cursor:pointer;  
     box-shadow: 0 5px 10px rgba(154,160,185,.05), 0 5px 10px rgba(166,173,201,.2);
 }
+
+.pics{
+    height: 50px;
+}
+
+.gallery{
+    margin-top: 50px;
+} 
+
+div.gallery {
+    margin: 130px;
+    border: 1px solid #ccc;
+    float: left;
+    width: 190px;
+  }
+  
+  div.gallery:hover {
+    border: 2px solid #777;
+  }
+  
+  div.gallery img {
+    width: 70%;
+    height: auto;
+    padding: 15px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  
+  div.desc {
+    padding: 15px;
+    text-align: center;
+  }
