--- a/style.css
+++ b/style.css
@@ -14,3 +14,9 @@ a:hover
     cursor:pointer;  
     box-shadow: 0 5px 10px rgba(154,160,185,.05), 0 5px 10px rgba(166,173,201,.2);
 }
+
+@media screen and (max-width: 435px) {
+    .table {
+        font-size: 85%;
+    }
+}
