--- a/pages/testing/testing.css
+++ b/pages/testing/testing.css
@@ -1,3 +1,4 @@
+
 .center {
     display: flex;
     justify-content: center;
@@ -16,3 +17,23 @@ a:hover
     cursor:pointer;  
     box-shadow: 0 5px 10px rgba(154,160,185,.05), 0 5px 10px rgba(166,173,201,.2);
 }
+
+.gallery{
+    margin: auto;
+    justify-content: center;
+} 
+
+div.gallery {
+    margin: 90px;
+    border: 1px solid #ccc;
+    float: left;
+    width: 300px;
+    margin-right: auto;
+    
+  }
+  
+
+  div.desc {
+    padding: 15px;
+    text-align: center;
+  }
