--- a/pages/resources/resources.css
+++ b/pages/resources/resources.css
@@ -10,3 +10,7 @@ a:hover
     cursor:pointer;  
     box-shadow: 0 5px 10px rgba(154,160,185,.05), 0 5px 10px rgba(166,173,201,.2);
 }
+
+.js body { 
+    display: none; 
+}
