--- a/pages/news/news.css
+++ b/pages/news/news.css
@@ -14,13 +14,13 @@ a:hover
 .body {
     margin: 0 15% 0 10%;
     display: grid; 
-    grid-template-columns: repeat(auto-fill, minmax(400px, 1fr)); 
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); 
     margin: 80px; 
     grid-gap: 20px;
 }
 
 @media screen and (max-width: 460px) {
     .body {
-        margin-left: 7px;
+        margin-right: 10px;
     }
 }
