--- a/pages/feedback/feedback.css
+++ b/pages/feedback/feedback.css
@@ -1,3 +1,15 @@
 .js body { 
     display: none; 
 }
+a {
+    color: inherit; 
+    text-decoration: none;
+}
+
+a:hover 
+{
+    color: inherit;  
+    text-decoration:none; 
+    cursor:pointer;  
+    box-shadow: 0 5px 10px rgba(154,160,185,.05), 0 5px 10px rgba(166,173,201,.2);
+}
