responsive prevention page

--- a/pages/prevention/prevention.css
+++ b/pages/prevention/prevention.css
@@ -52,3 +52,10 @@ div.gallery {
   .js body { 
     display: none; 
 }
+
+.img-cards {
+  display: grid; 
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); 
+  margin-left: 15%; 
+}
+
