--- a/pages/prevention/prevention.css
+++ b/pages/prevention/prevention.css
@@ -1,13 +1,14 @@
-h3{
-    padding-left: 50px;
+a {
+  color: inherit; 
+  text-decoration: none;
 }
 
-.info{
-    padding-left: 50px;
-}
-
-.paras{
-    padding-top: 5px;
+a:hover 
+{
+  color: inherit;  
+  text-decoration:none; 
+  cursor:pointer;  
+  box-shadow: 0 5px 10px rgba(154,160,185,.05), 0 5px 10px rgba(166,173,201,.2);
 }
 
 .pics{
@@ -15,45 +16,9 @@ h3{
 
 }
 
-.B3{
-    padding-top: 40px;
-}
-
-.gallery{
-    margin-top: 50px;
-} 
-
-div.gallery {
-    margin: 90px;
-    border: 1px solid #ccc;
-    float: left;
-    width: 200px;
-    margin-right: 50px;
-  }
-  
-  div.gallery:hover {
-    border: 2px solid #777;
-  }
-  
-  div.gallery img {
-    width: 70%;
-    height: auto;
-    padding: 15px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-  }
-  
-  div.desc {
-    padding: 15px;
-    text-align: center;
-  }
-
-  .js body { 
-    display: none; 
-}
-
 .img-cards {
+  margin-top: 50px;
+  margin-bottom: 50px;
   display: grid; 
   grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); 
   margin-left: 15%; 
