--- a/pages/symptoms/symptoms.css
+++ b/pages/symptoms/symptoms.css
@@ -15,34 +15,11 @@ a:hover
     height: 50px;
 }
 
-.gallery{
-    margin-top: 50px;
-} 
-
-div.gallery {
-    margin: 130px;
-    border: 1px solid #ccc;
-    float: left;
-    width: 190px;
-  }
-  
-  div.gallery:hover {
-    border: 2px solid #777;
-  }
-  
-  div.gallery img {
-    width: 70%;
-    height: auto;
-    padding: 15px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-  }
-  
-  div.desc {
-    padding: 15px;
-    text-align: center;
-  }
-  .js body { 
-    display: none; 
+.img-cards {
+  margin-top: 50px;
+  margin-bottom: 50px;
+  display: grid; 
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); 
+  margin-left: 15%; 
 }
+
