--- a/pages/testing/testing.css
+++ b/pages/testing/testing.css
@@ -18,26 +18,11 @@ a:hover
     box-shadow: 0 5px 10px rgba(154,160,185,.05), 0 5px 10px rgba(166,173,201,.2);
 }
 
-.gallery{
-    margin: auto;
-    justify-content: center;
-} 
-
-div.gallery {
-    margin: 90px;
-    border: 1px solid #ccc;
-    float: left;
-    width: 300px;
-    margin-right: auto;
-    
-  }
-  
-
-  div.desc {
-    padding: 15px;
-    text-align: center;
-  }
-
-  .js body { 
-    display: none; 
+.map-cards-container {
+    margin-top: 50px;
+    margin-bottom: 50px;
+    display: grid; 
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); 
+    margin-left: 15%; 
+    margin-right: 15%;
 }
